fix: use textarea over input for better readability

--- a/components/Challenge/challenge.module.scss
+++ b/components/Challenge/challenge.module.scss
@@ -33,7 +33,7 @@
 }
 
 .answer {
-  input {
+  textarea {
     font-size: 1.5em;
     min-width: 100%;
     height: 20vh;
